Search endpoint improvement
